css/head_to_head.css
figure {
  padding: 20px 0px;
}

.profile-body {
  padding-top: 30px;
}

div.form-group {
  margin: 10px 0px;
  position: relative;
}


label.labels {
  width: 60px;
}

.last {
  padding-right: 3px;
}

div#graph_container {
  min-width: 300px;
  margin: 0px auto;
}

#more_options {
  margin: 0px 5px;
}

.attributes .form-group {
  display: inline-block;
}

#gameweek {
  display: inline-block;
}


@media (max-width: 767px) {
  .sm-screen {
    display: inline-block;
    width: 65px;
  }
}

@media (max-width: 707px) {
  .attributes .form-group {
    padding-right: 25px;
    margin-bottom: 0;
  }
}

@media (min-width: 708px) and (max-width: 991px) {
  .attributes .form-group {
    position: inherit;
    padding-right: 25px;
    margin-bottom: 0px;
  }
}

@media (max-width: 991px) {
  #gameweek {
    margin: 10px 0px;
  }
  .attributes {
    margin: 10px 0px;
  }
  button.btn.center-block {
    margin-top: 10px;
    margin-bottom: 10px;
  }
  .right > figcaption {
    padding-bottom: 10px;
  }
}

.input-group-addon {
  color: #639ec8;
  background-color: #dbe9f2;
}

.help-block.text-warning {
  color: #cc0202;
  text-align: center;
  margin-bottom: 0;
}

table, tr.thead-row-color > th {
  text-align: center;
}

/*
caption.profile_caption {
  text-align: center;
  color: #cc0202;
}
*/
.error {
  border-color: #cc0202;
  outline: 0;
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
}

.error:focus {
  border-color: #FF0000;
  outline: 0;
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(204, 2, 2, 0.6);
}

/* Overriding jQuery's default */
li.ui-menu-item.ui-state-focus {
  border: 1px solid #dbe9f2;
  background: #dbe9f2;
  font-weight: normal;
  color: #2b2b2b;
}

.values {
  font-weight: bold;
}

@media (min-width: 992px) {
  table {
    margin: 20px 0;
  }
}

